# trip-search-mcp

./: .env.example  .gitignore  AGENTS.md  BACKLOG.md  FEATURES.md  HOTELS-EXTENSION-SPEC.md  LICENSE  MIGRATION-FLI-SPEC.md  README.md  SEARCH-STAYS-SPEC.md  SPEC.md  TRIP-PLANNING-EXPANSION-SPEC.md  pyproject.toml  track_flight.py
docs/: PHASE0_GUIDE.md  SETUP.md
docs/superpowers/plans/: 2026-05-11-flight-search-mcp-phase1.md
docs/upstream/: fli-booking-token-issue.md
scripts/: fetch_phase0_fixture.py  verify_ecb_rates.py  verify_fast_hotels.py  verify_fli.py  verify_google_events.py  verify_price_math.py  verify_property_details.py  verify_serpapi.py  verify_serpapi_hotels.py  verify_tripadvisor_activities.py  verify_tripadvisor_place_details.py  verify_vacation_rentals.py  verify_weather_providers.py
src/flights_mcp/: cache.py  errors.py  logging_config.py  models.py  server.py
src/flights_mcp/amadeus/: client.py  normalize.py  token.py
src/flights_mcp/fli_backend/: client.py  normalize.py
src/flights_mcp/serpapi/: client.py  normalize.py  raw.py
src/flights_mcp/serpapi_hotels_backend/: client.py  normalize.py  raw.py
src/flights_mcp/tools/: search_cheapest_dates.py  search_flights.py  search_hotels.py
src/trip_search_mcp/: cities.py  errors.py  logging_config.py  models.py  server.py
src/trip_search_mcp/airbnb_backend/: client.py  geocode.py  normalize.py
src/trip_search_mcp/ecb_backend/: client.py  parse.py
src/trip_search_mcp/fli_backend/: client.py  normalize.py
src/trip_search_mcp/monitoring/: db.py  refresh.py
src/trip_search_mcp/open_meteo_backend/: client.py  normalize.py  raw.py
src/trip_search_mcp/serpapi_events_backend/: client.py  normalize.py  raw.py
src/trip_search_mcp/serpapi_hotels_backend/: client.py  normalize.py  raw.py
src/trip_search_mcp/tools/: cancel_watch.py  convert_currency.py  (+10 more)
tests/: conftest.py  test_airbnb.py  test_cache.py  test_cities.py  test_client.py  test_convert_currency.py  test_errors.py  test_get_stay_details.py  test_hotels_client.py  test_hotels_normalize.py  test_models.py  test_monitoring.py  test_normalize.py  test_search_activities.py  test_search_cheapest_dates.py  test_search_events.py  test_search_flights.py  test_search_hotels.py  test_search_stays.py  test_stays_client.py  test_stays_merge.py  test_stays_normalize.py  test_token.py  test_weather.py
tests/fixtures/: auth_failed.json  empty_results.json  fast_hotels_tampere_success.json  fli_dates_flex.json  fli_hel_iad_dates.json  fli_hel_iad_success.json  fli_one_way_success.json  fli_round_trip_success.json  serpapi_empty_results.json  serpapi_events_lisbon_concerts_june.json  serpapi_events_lisbon_generic.json  serpapi_events_lisbon_next_week.json  serpapi_events_paris_bts_july.json  serpapi_hel_iad_success.json  serpapi_hotels_success.json  serpapi_hotels_tampere_compare.json  serpapi_hotels_tampere_success.json  serpapi_one_way_success.json  serpapi_property_details_tampere.json  serpapi_round_trip_outbound.json  serpapi_round_trip_return.json  serpapi_tripadvisor_lisbon_boat.json  serpapi_tripadvisor_lisbon_cooking.json  serpapi_tripadvisor_lisbon_generic.json  serpapi_tripadvisor_place_details.json  serpapi_vacation_rentals_success.json  serpapi_vacation_rentals_tampere.json  synthetic_round_trip.json  weather_nws_reston.json  weather_nws_tampere_outside.json  weather_open_meteo_reston.json  weather_open_meteo_tampere.json
(+3 files in other folders)
