[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flights-mcp"
version = "0.1.0"
description = "MCP server wrapping the Amadeus Flight Offers Search API"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.5,<3.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.7,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
flights-mcp = "flights_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/flights_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
