[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flights-mcp"
version = "0.1.0"
description = "MCP server exposing Google Flights search (via SerpAPI) as a tool for Claude and other MCP clients"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["mcp", "model-context-protocol", "claude", "flights", "google-flights", "serpapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=2.5,<3.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.7,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
flights-mcp = "flights_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/flights_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
